# digger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  rustfmt.toml
crates/digger-actors/: Cargo.toml
crates/digger-actors/src/: engine.rs  lib.rs  models.rs
crates/digger-actors/tests/: actor_contract.rs
crates/digger-adversarial/: Cargo.toml
crates/digger-adversarial/src/: engine.rs  lib.rs  models.rs
crates/digger-adversarial/tests/: adversarial_contract.rs
crates/digger-agent/: Cargo.toml
crates/digger-agent-mcp/: Cargo.toml
crates/digger-agent-mcp/src/: lib.rs  tools.rs
crates/digger-agent-mcp/tests/: stdio_roundtrip.rs
crates/digger-agent-proof-task/: Cargo.toml
crates/digger-agent-proof-task/src/: lib.rs  types.rs  validation.rs
crates/digger-agent-proof-task/tests/: agent_contract_integration.rs  proof_task_contract.rs
crates/digger-agent/src/: contract.rs  guardrails.rs  lib.rs
crates/digger-api/: Cargo.toml
crates/digger-api/src/: app.rs  auth.rs  config.rs  error.rs  jobs.rs  lib.rs  main.rs  metrics.rs  middleware.rs  net_guard.rs  org_guard.rs  rate_limit.rs  security.rs  timing.rs  webhook_signing.rs
crates/digger-api/tests/: auth_integration.rs
crates/digger-benchmark/: Cargo.toml
crates/digger-benchmark/fixtures/: legacy_golden.json
crates/digger-benchmark/scripts/: batch_compile.js
crates/digger-benchmark/src/: gate.rs  lib.rs  loader.rs  measure.rs  models.rs  runner.rs
crates/digger-benchmark/tests/: benchmark_contract.rs  bytecode_path.rs  cei_detection.rs  cei_ground_truth.rs  composability_measurement.rs  engine_parity.rs  evm_price_measurement.rs  gate_bites.rs  gate_e2e.rs  generalization_benchmark.rs  kind_fidelity.rs  multi_class_detection.rs  operation_fidelity.rs  reconciled_coverage.rs  solana_detector_measurement.rs
crates/digger-cli/: Cargo.toml
crates/digger-cli/src/: audit_triage_cmd.rs  benchmark.rs  chain_trace.rs  ci_mode.rs  commands.rs  dashboard_cmd.rs  engine_triage.rs  evidence_package_cmd.rs  foundry.rs  fuzz_evidence_cmd.rs  fuzz_maturity_cmd.rs  hypothesis_cmd.rs  main.rs  output.rs  pipeline.rs  proof_task_cmd.rs  repo_intelligence_cmd.rs  report.rs  report_cmd.rs  report_draft_cmd.rs  scan_live.rs  source_triage.rs  synthesize_cmd.rs  validate.rs  verify_claim_cmd.rs
crates/digger-cli/tests/: address_triage_cli.rs  audit_triage_cli.rs  fetch_honesty.rs  fuzz_evidence_cli.rs  fuzz_maturity_cli.rs  repo_intelligence_cli.rs  scan_cli_tests.rs
crates/digger-core/: Cargo.toml
crates/digger-core/src/: freeze.rs  lib.rs
crates/digger-core/tests/: phase3_freeze_contract.rs
crates/digger-economics/: Cargo.toml
crates/digger-economics/src/: engine.rs  lib.rs  models.rs
crates/digger-economics/tests/: economics_contract.rs
crates/digger-evaluation/: Cargo.toml
crates/digger-evaluation/src/: blind.rs  case_study.rs  contest_eval.rs  continuous.rs  continuous_regression.rs  coverage_dashboard.rs  differential.rs  eval_models.rs  false_positive.rs  harness.rs  improvement.rs  integration.rs  lib.rs  live_eval.rs  live_protocol_eval.rs  market_dashboard.rs  metrics.rs  miss_analysis.rs  models.rs  perf_profile.rs  regression.rs  replay_eval.rs  research_dataset.rs  research_dataset_v2.rs  research_report.rs
crates/digger-execution/: Cargo.toml
crates/digger-execution/src/: engine.rs  lib.rs  models.rs
crates/digger-execution/tests/: execution_audit.rs  execution_contract.rs
crates/digger-expansion/: Cargo.toml
crates/digger-expansion/src/: engine.rs  lib.rs  models.rs
crates/digger-expansion/tests/: expansion_contract.rs
crates/digger-gen2-protocol/: Cargo.toml
crates/digger-gen2-protocol/src/: analyzer.rs  lib.rs  models.rs
crates/digger-gen2-protocol/tests/: protocol_contract.rs
crates/digger-hypothesis/: Cargo.toml
crates/digger-hypothesis/src/: analytics.rs  assumption_validation.rs  assumptions.rs  competing.rs  compound.rs  confidence_audit.rs  consistency.rs  contradiction.rs  counterfactual.rs  derivation.rs  evidence_ranking.rs  explanation.rs  gen2_compat.rs  invariant_coverage.rs  inversion.rs  legacy_bridge.rs  lib.rs  minimal_evidence.rs  models.rs  pipeline.rs  provenance.rs  ranking.rs  session.rs  stability.rs  suspicion.rs  trace_validation.rs  verification.rs
crates/digger-hypothesis/tests/: assumption_contract.rs  compound_contract.rs  corpus_evidence_tests.rs  corpus_invariance_broad.rs  hypothesis_contract.rs  inversion_contract.rs  owner_guard_tests.rs  precision_loss_tests.rs  session_contract.rs  suspicion_controls.rs  suspicion_scaffold_tests.rs  unchecked_arith_tests.rs  verification_contract.rs
crates/digger-ingestion/: Cargo.toml
crates/digger-ingestion/src/: cli.rs  corpus_intelligence.rs  correlation.rs  dedup.rs  fetcher.rs  file_class.rs  health.rs  lib.rs  manifest.rs  observability.rs  pipeline.rs  regression.rs  reliability.rs  scheduler.rs  semantic_extraction.rs  store.rs
crates/digger-investigation/: Cargo.toml
crates/digger-investigation/src/: fact_impl.rs  ids.rs  lib.rs  plan.rs  planner.rs  priority.rs  scope.rs  target.rs  tests.rs
crates/digger-knowledge/: Cargo.toml
crates/digger-knowledge/src/: analytics.rs  cantina.rs  classifier.rs  code4rena.rs  corpus.rs  cyfrin.rs  dashboard.rs  dashboard_analytics.rs  defihacklabs.rs  defillama.rs  enrichment.rs  graph_builder.rs  graph_traversal.rs  lib.rs  normalizer.rs  observability.rs  ontology.rs  openzeppelin.rs  pashov.rs  pattern_extractor.rs  pdf_extractor.rs  postmortems.rs  protocol_docs.rs  protocol_packs.rs  quality.rs  sherlock.rs  store_builder.rs  tests.rs  validation.rs  (+2 more)
crates/digger-monitor/: Cargo.toml
crates/digger-oplayer/: Cargo.toml
crates/digger-parser/: Cargo.toml
crates/digger-pipeline/: Cargo.toml
crates/digger-platform/: Cargo.toml
crates/digger-protocol-model/: Cargo.toml
crates/digger-reconstruct/: Cargo.toml
crates/digger-report/: Cargo.toml
crates/digger-research-context/: Cargo.toml
crates/digger-research-graph/: Cargo.toml
crates/digger-resource-lifecycle/: Cargo.toml
(+797 files in other folders)
