[package]
name = "digger-agent-proof-task"
version.workspace = true
edition.workspace = true
description = "Agent-facing proof task contract for deterministic evidence gathering"
license = "proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
digger-repo-intelligence = { path = "../digger-repo-intelligence" }
digger-agent-hypothesis = { path = "../digger-agent-hypothesis" }
