[package]
name = "digger-evaluation"
version.workspace = true
edition.workspace = true

[dependencies]
digger-benchmark = { path = "../digger-benchmark" }
digger-hypothesis = { path = "../digger-hypothesis" }
digger-graph = { path = "../digger-graph" }
digger-parser = { path = "../digger-parser" }
digger-ir = { path = "../digger-ir" }
digger-synthesis = { path = "../digger-synthesis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = { workspace = true }
