[package]
name = "digger-expansion"
version.workspace = true
edition.workspace = true

[dependencies]
digger-ir = { path = "../digger-ir" }
digger-parser = { path = "../digger-parser" }
digger-execution = { path = "../digger-execution" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
