[package]
name = "digger-gen2-protocol"
version.workspace = true
edition.workspace = true

[features]
corpus = []

[dependencies]
digger-ir = { path = "../digger-ir" }
digger-parser = { path = "../digger-parser" }
digger-graph = { path = "../digger-graph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
