[package]
name = "digger-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
digger-ir = { path = "../digger-ir" }
digger-knowledge-models = { path = "../digger-knowledge-models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
pdf-extract = "0.12"
thiserror = { workspace = true }
