[package]
name = "digger-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
digger-evidence = { path = "../digger-evidence" }
digger-runtime = { path = "../digger-runtime" }
digger-parser = { path = "../digger-parser" }
digger-reconstruct = { path = "../digger-reconstruct" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = { workspace = true }
