[package]
name = "digger-parser"
version.workspace = true
edition.workspace = true

[features]
corpus = []

[dependencies]
digger-ir = { path = "../digger-ir" }
regex = "1"
solang-parser = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "printing"] }
quote = "1"
proc-macro2 = "1"
thiserror = { workspace = true }
