[package]
name = "digger-platform"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
