[package]
name = "digger-protocol-model"
version.workspace = true
edition.workspace = true

[dependencies]
digger-reconstruct = { path = "../digger-reconstruct" }
digger-gen5-common = { path = "../digger-gen5-common" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
