[package]
name = "digger-research-graph"
version.workspace = true
edition.workspace = true

[dependencies]
digger-reconstruct = { path = "../digger-reconstruct" }
digger-protocol-model = { path = "../digger-protocol-model" }
digger-investigation = { path = "../digger-investigation" }
digger-gen5-common = { path = "../digger-gen5-common" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
